--- a/history.txt
+++ b/history.txt
@@ -303,6 +303,7 @@ Received some feature requests recently. These are some NOT YET ADDED:
 4/6/2016 7:38 PM: Finished adding parts list view.
 4/6/2016 7:38 PM: Added a new slider-to-slider simulation algorithm for a previously unhandled type of sliding connection.
 4/6/2016 7:38 PM: Changed the version to 3.2.0.
+4/18/2016 12:28 PM: Fixed bug when using interactive simulation and all controls are marked as "always manual" - the simulator step count behaved incorrectly and the simulation was jumpy.
 
 
 
