--- a/history.txt
+++ b/history.txt
@@ -304,6 +304,7 @@ Received some feature requests recently. These are some NOT YET ADDED:
 4/6/2016 7:38 PM: Added a new slider-to-slider simulation algorithm for a previously unhandled type of sliding connection.
 4/6/2016 7:38 PM: Changed the version to 3.2.0.
 4/18/2016 12:28 PM: Fixed bug when using interactive simulation and all controls are marked as "always manual" - the simulator step count behaved incorrectly and the simulation was jumpy.
+4/19/2016 2:02 PM: Fixed bug in undo feature where selected element information was not getting cleared properly.
 
 
 
