--- a/history.txt
+++ b/history.txt
@@ -305,6 +305,11 @@ Received some feature requests recently. These are some NOT YET ADDED:
 4/6/2016 7:38 PM: Changed the version to 3.2.0.
 4/18/2016 12:28 PM: Fixed bug when using interactive simulation and all controls are marked as "always manual" - the simulator step count behaved incorrectly and the simulation was jumpy.
 4/19/2016 2:02 PM: Fixed bug in undo feature where selected element information was not getting cleared properly.
+4/19/2016 12:00 AM: Fixed bug in undo feature that could cause a crash later wel after the undo.
+5/10/2016 12:00 AM: Changes to the stretching computations to be more consistent.
+5/12/2016 1:47 AM: Draw chains to show chain link movement.
+
+
 
 
 
